--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,14 @@
   background-size: cover;
 }
 .slide1 {
-  background-image: url("./assets/images/slider-1.jpg");
+  background-image: url("./assets/images/banner-1.jpg");
 }
 .slide2 {
-  background-image: url("./assets/images/slider-2.jpg");
+  background-image: url("./assets/images/banner-2.jpg");
 }
 .slide3 {
-  background-image: url("./assets/images/slider-3.jpg");
+  background-image: url("./assets/images/banner-3.jpg");
+}
+.slide4 {
+  background-image: url("./assets/images/banner-4.jpg");
 }
