--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,25 @@
 .slide4 {
   background-image: url("./assets/images/banner-4.jpg");
 }
+.dropDownProfile{
+  position: absolute;
+  top: 5.2rem;
+  right: 2.2rem;
+  min-width: 120px;
+  padding: 10px;
+  border-radius: 8px;
+  background-color: white;
+  border: 1px solid gray;
+}
+.dropDownProfile::before {
+  content: '';
+  position: absolute;
+  top: -0.7rem;
+  right: 1.1rem;
+  width: 20px;
+  height: 20px;
+  transform: rotate(45deg);
+  background-color: white;
+  border-left: 1px solid gray;
+  border-top: 1px solid gray;
+}
