Footer section added

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@
   position: absolute;
   top: 5.2rem;
   right: 2.2rem;
-  min-width: 120px;
+  /* min-width: 120px; */
   padding: 10px;
   border-radius: 8px;
   background-color: white;
